// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should render Avatar 1`] = `
<div
  className="root"
>
  <div
    className="wrapper"
  >
    IB
  </div>
</div>
`;

exports[`<Avatar /> should render image instead children if \`src\` prop is not passed 1`] = `
<div
  className="root"
>
  <div
    className="wrapper"
  >
    IB
  </div>
</div>
`;

exports[`<Avatar /> should render image instead of children if \`src\` prop is passed 1`] = `
<div
  className="root"
>
  <div
    className="wrapper"
  >
    <div
      className="img"
      style={
        Object {
          "backgroundImage": "url(https://google.com)",
        }
      }
    />
  </div>
</div>
`;
